kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: default
  name: simple-web-app-deployment
  namespace: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-web-app
  template:
    metadata:
      labels:
        app: simple-web-app
    spec:
      containers:
        - image: 'abhishekporwal836/webapp:latest'
          name: simple-web-app
          ports:
            - containerPort: 80
