kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-app-svc
spec:
  selector:
    app: simple-web-app
  ports:
    - port: 80
      name: http
