kubernetes/gateway.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-web-app-gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
    - http:
        paths:
          - path: /.*
            backend:
              serviceName: simple-web-app-svc
              servicePort: 80
